--- a/src/web.config
+++ b/src/web.config
@@ -1,17 +1,24 @@
+[12:05 PM] Vibhooti Visen
+    
+
 <?xml version="1.0"?>
 <configuration>
-  <system.webServer>
-    <rewrite>
-      <rules>
-        <rule name="React Routes" stopProcessing="true">
-          <match url=".*" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="/" />
-        </rule>
-      </rules>
-    </rewrite>
-  </system.webServer>
+<system.web>
+ <customErrorsmode="Off"/>
+</system.web>
+ <system.webServer>
+ <rewrite>
+ <rules>
+ <rulename="Angular Routes"stopProcessing="true">
+ <matchurl=".*" />
+ <conditionslogicalGrouping="MatchAll">
+ <addinput="{REQUEST_FILENAME}"matchType="IsFile"negate="true" />
+ <addinput="{REQUEST_FILENAME}"matchType="IsDirectory"negate="true" />
+ </conditions>
+ <actiontype="Rewrite"url="/" />
+ </rule>
+ </rules>
+ </rewrite>
+ </system.webServer>
 </configuration>
+
