--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@types/googlemaps": "^3.37.6",
     "bootstrap": "^4.3.1",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
