--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^8.17.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
