--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
+    "ng-starrating": "^1.0.7",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
     "sweetalert2": "^8.17.1",
