--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/googlemaps": "^3.37.6",
     "bootstrap": "^4.3.1",
     "ng-starrating": "^1.0.7",
+    "ngx-bootstrap": "^5.1.1",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
     "sweetalert2": "^8.17.1",
