--- a/angular.json
+++ b/angular.json
@@ -114,6 +114,7 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
+            "codeCoverage": true,
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
@@ -155,4 +156,5 @@
       }
     }},
   "defaultProject": "letsWork"
+  
 }
