--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng-starrating": "^1.0.7",
     "ngx-bootstrap": "^5.1.1",
     "ngx-spinner": "^8.0.3",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^8.17.1",
     "tslib": "^1.10.0",
